app/assets/stylesheets/pages.scss
/*************

COLORS    COLORS   COLORS   COLORS   COLORS   COLORS   COLORS

*************/
$nav-color: #1e1c1b;
$nav-highlight: #b0eb00;
$coeusdarkgreen: #03490b;
$gray2: #7EAE42;
$form-gray: #5F5F5F;
$dark-green: #0A2800;


.cdg {
   color: $coeusdarkgreen;
}

.bgt {
  background-color: transparent;
}

//// delete div-p


/**********

                     ******************************************************

GENERAL     GENERAL     GENERAL     GENERAL     GENERAL     GENERAL     GENERAL     GENERAL

                     ******************************************************

***********/



div {
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: #fff;
}


html {
  background-color: #000;
}

h1, p {
    margin-top: 20px;
    letter-spacing: 110%;
    word-spacing: 300%;
    line-height: 200%;
}

h1 {
    font-size: 26px;
 }

h1, h2, h3, h4, h5, h6, p, li, div, nav, html {
  font-family: 'Montserrat', sans-serif;

}

p {
    font-size: 18px;
    text-align: justify;
    font-family: 'Open Sans', sans-serif;
}

li {
   display: inline;
   list-style-type: none;
   font-size: 20px;
   padding-left: 40px;
   font-variant: small-caps;
   font-weight: 300;
   color: #fff;
  }

nav {
   height: 100%;
   background-color: #000;
   text-align: center;
  }

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  text-align: bottom;
}


a:link {
    color: white;
    text-decoration: none;
}

/* visited link */
a:visited {
    color: white;
    text-decoration: none;
}

/* mouse over link */
a:hover {
    color: $nav-highlight;
    text-decoration: none;
}

/* selected link */
a:active {
    color: $nav-highlight;
    text-decoration: none;
}







/**********

                     ******************************************************

ClASSES     ClASSES     ClASSES     ClASSES     ClASSES     ClASSES     ClASSES     ClASSES

                     ******************************************************

***********/



.banner-div {
    height: 900px;
    img {
        height: 900px;
        width: 100%;
    }
}

// other sizes in custom.scss
.banner-img-div-500 {
    position: relative;
    width: 100%;
    height: 500px;
    overflow: hidden;
}

.banner-img {
    height: auto;
    width: 100%;
}

.banner-text {
    position: absolute;
    top: 75px;
    margin-left: 10%;
    margin-right: 10%;
    width: 80%;
    text-align: center;
    letter-spacing: .5em;
    color: #fff;
    font-size: 80px;
    font-weight: 600;
}

.page-ul {
   color: #000;
   line-height: 200%;
   font-size: 17px;

}

.page-li {
   display: list-item;
   list-style-type: circle;
   color: #000;
   font-family: 'Open Sans', sans-serif;
   font-variant: none;
   font-size: 17px;
   font-weight: 500;
}

.page-li::before {
   color: #000;
}

.text-center {
   text-align: center;
}



/**********

                     ******************************************************

HEADER     HEADER     HEADER     HEADER     HEADER     HEADER     HEADER     HEADER

                     ******************************************************

***********/

.header {
  padding: 0;
  margin: 0;
  background-color: #000;
  height:90px;
}


#nav-div-id {
   height: 100%;
}

.nav-div {
   background-color: $nav-color;
   height: 100%;
}

#nav-coeus {
   font-weight: 400;
   padding-top: 15%;
   margin: 0;
   height: 100%;
   font-variant: italic;
   font-size: 42px;
   color: #fff;

}

.nav-ul-left {
   height: 50px;
   padding-top: 50px;
   text-align: left;
}
.nav-ul-right {
   height: 50px;
   padding-top: 50px;
   text-align: right;
}

.nav-text {
   height: 100%;
   background-color: $nav-color;
   padding-top: 0px;


}

.nav-image {
   background-color: $nav-color;
   padding-top: 13px;
   margin: 0;
}

#main-logo {
   height: 61.6px;
   width: 53.6px;
}





// // // // // // // // // // // // // // // // // // // //
// appear nav // appear nav // appear nav // appear nav //
// // // // // // // // // // // // // // // // // // // //
// appear nav // appear nav // appear nav // appear nav //
// // // // // // // // // // // // // // // // // // // //

#appear-nav {
   position: fixed;
   display: none;
   top: 0;
   height: 50px;
   background-color: $nav-color;
   width: 100%;
   z-index: 90;
}

.appear-nav-ul {
   height: 30px;
   padding-top: 12px;
   color: #fff;
   text-align: center;
}


#appear-logo {
   height: 70%;
   weight: 70%;
}


/**********

                     ******************************************************

FOOTER     FOOTER     FOOTER     FOOTER     FOOTER     FOOTER     FOOTER     FOOTER

                     ******************************************************

***********/
#footer {
  margin:0;
  padding-top: 30px;
  padding-bottom: 50px;
  padding-right: 20px;
}

.footer-p1 {
   text-align: right;
   font-size: 13px;
   color: #fff;
   margin: 0;
   padding: 0;
   letter-spacing: .05em;
   line-height: 18px;
}
.footer-p2 {
   text-align: right;
   font-size: 9px;
   color: #fff;
   margin: 0;
   padding: 0;
   letter-spacing: .05em;
   line-height: 18px;
}

.prefooter {
  height: 150px;
  width: 100%;
  background-color: #fff;
  margin:0;
  padding:0;
}


#home-wwd {
   color: $coeusdarkgreen;
   font-size: 42px;
   text-align: center;
   background-color: #fff;
}







/**********

                     ******************************************************

HOME     HOME     HOME     HOME     HOME     HOME     HOME     HOME

                     ******************************************************

***********/


#home-iframe {
  width: 1271px;
  height: auto;
}

.bc {
   background-color: #F5F6F7;
}

#integration-div {
   background-color: #fff;
}

.ii-box {
   background-color: #FFF;
}

.h-600w {
   height: 600px;
}

#js-home-div {

   overflow: hidden;
}

#second-home-image {
  position: absolute;
  margin-top: -120px;
}


/**********

                     ******************************************************

ABOUT     ABOUT     ABOUT     ABOUT     ABOUT     ABOUT     ABOUT     ABOUT

                     ******************************************************

***********/

.about-div {
    width: 100%;
    background-color: #fff;
    .img-div {
        height: auto;
        width: 100%;
    }
}


.about-picture {
    height: auto;
    width: 100%;
}

.about-text {
    margin: 40px;
    text-align: left;
}

.about-white-transparent {
    background-color: rgb(255,255,255);
    background-color: rgba(255,255,255,0.7);
    position: absolute;
    top: 0;
    margin-top: 120px;
    margin-left: 40px;
    height: 600px;
    width: 44%;

}






/**********

                     ******************************************************

CONTACT     CONTACT     CONTACT     CONTACT     CONTACT     CONTACT     CONTACT

                     ******************************************************

***********/


.contact-translucent {
    position: absolute;
    top: 0;
    height: 700px;
    margin: 0;
    padding: 0;
    margin-top: 100px;
    background-color: rgba(255,255,255,.84);
    box-shadow: 1px 2px 2px 1px rgba(255,255,255, 0.9);
    margin-left: 15%;
    margin-right: 15%;
    width: 70%;
    z-index: 2;
}




.label {
  margin-right: 15%;
  margin-left: 15%;
  width: 60%;
}

.input-box {
  width: 60%;
  padding: 3px;
  padding-top: 6px;
  margin-right: 15%;
  margin-left: 15%;
  font-size: 16px;
  border-radius:0.2rem;
}

.input-box:focus {
  border: 1px solid $nav-highlight;

}

#text-area-label {
  display: block;
}

#text-area-div {
  width: 100%;
  margin-top: 40px;
}

.text-area {
  margin-right: 7.5%;
}




/**********

                     ******************************************************

TEAM     TEAM     TEAM     TEAM     TEAM     TEAM     TEAM     TEAM     TEAM

                     ******************************************************

***********/








/**********

                     ******************************************************

PROJECTS     PROJECTS     PROJECTS     PROJECTS     PROJECTS     PROJECTS     PROJECTS

                     ******************************************************

***********/












/**********

                     ******************************************************

NEWS     NEWS     NEWS     NEWS     NEWS     NEWS     NEWS     NEWS     NEWS

                     ******************************************************

***********/

.news-div {
    width: 76%;
    margin-left: 12%;
    margin-right: 12%;
    margin-top: 40px;
    margin-bottom: 40px;
    border-bottom: 1.5px solid $nav-color;
    height: 100px;
}

#last-news-div {
   margin-bottom:0;
   padding-bottom:0;
}

.news-title {
    margin-top: 20px;
    margin-bottom: 20px;
    width: 30%;
    float: left;

}

.news-content {
    margin-top: 20px;
    margin-bottom: 20px;
    width: 70%;
    float: left;
}











/**********

                     ******************************************************

LOGIN     LOGIN     LOGIN     LOGIN     LOGIN     LOGIN     LOGIN     LOGIN     LOGIN

                     ******************************************************

***********/

.loginbox {
  background-color: transparent;
}

#loginbox2div {
  /*
  background-color: rgb(255,255,255);
  background-color: rgba(255,255,255, 0.9);

  box-shadow: 1px 2px 2px 1px rgba(0,0,0, 0.6);
  */
  background-color: rgba(255,255,255,.84);
  box-shadow: 1px 2px 2px 1px rgba(255,255,255, 0.9);
}

.login-gray-translucent {
    position: absolute;
    background-color: transparent;
    top: 0;
    width: 70%;
    margin-left: 15%;
    margin-right: 15%;
}

#session_email {
   width: 300px;
   font-size: 16px;

}

#session_password {
   width: 150px;
   font-size: 16px;
   clear: right;
}

#session_remember_me {
}

.rm {
   clear: left;
   display: block;
}

.btn-login {

}

.bshadow {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
}

.form-label {
  color: $dark-green;
}

#login-button{
  color: #000;
  background-color: rgba(255, 255, 255, .8);
  border: none;
  margin-left: 30px;
  padding: 10px 16px 10px 16px;
  border-color: $form-gray;
  font-family: 'Montserrat', sans-serif;
  border-radius: 0.3rem;
  font-size: 110%;
  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.4);

}

#login-button:hover {
    color: $coeusdarkgreen;
    background-color: rgb(255,255,255);
    background-color: rgba(255,255,255,.8);
    box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.7);
    font-weight: 800;
    //background-color: #025aa5;
    //border-color: #01549b;
  }

/**********

                     ******************************************************

FONTS     FONTS     FONTS     FONTS     FONTS     FONTS     FONTS     FONTS     FONTS

                     ******************************************************

***********/


.open-sans {
   font-family: 'Open Sans', sans-serif;
}


/**********

                     ******************************************************

IMAGES     IMAGES     IMAGES     IMAGES     IMAGES     IMAGES     IMAGES     IMAGES

                     ******************************************************

***********/

.gimage_img {
   height: 78px;
   width: 115px;
   padding-right: 25%;
   padding-left: 25%;
}

.gimage-h3 {
   font-size: 16px;
   text-align: center;
   color: $coeusdarkgreen;
}

.gwords-img {
   height: 192px;
   width: 338px;
   float: left;

}

.gwords-h1 {
   margin-top: 0;
   color: $coeusdarkgreen;
}

.h-20 {
   height: 20%;
   width: 100%;
   margin: 0;
   padding: 0;
}
.h-80 {
   height: 80%;
   width: 100%;
   margin: 0;
   padding: 0;
}

#gbulbwords {
   height: 304;
   width: 502;
}

.img-j1 {
   height: 300px;
   width: 300px;
}

.js-home-img {
   height: 250px;
   width: 250px;
}

#gbiopellets {

}

